# pagi-gateway-core

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md
.github/workflows/: ci.yaml
adapters/pagi-adapter-go/: go.mod
adapters/pagi-adapter-go/cmd/: main.go
adapters/pagi-adapter-go/internal/: bus.go  workflow.go
adapters/pagi-adapter-java/: pom.xml
adapters/pagi-adapter-java/src/main/java/com/pagi/adapter/: EnterpriseHandler.java  Main.java
adapters/pagi-adapter-python/: requirements.txt  setup.py
adapters/pagi-adapter-python/src/: config.py  main.py  middleware.py
adapters/pagi-adapter-python/tests/: test_middleware.py
adapters/pagi-provider-ollama/src/: config.py  main.py  provider.py
adapters/pagi-provider-openai/: requirements.txt
adapters/pagi-provider-openai/src/: config.py  main.py
adapters/pagi-provider-openrouter/src/: config.py  main.py  provider.py
config/: pagi.yaml
contracts/: agent.proto  memory.proto  model.proto
deployment/: OPTIONAL_Dockerfile  OPTIONAL_docker-compose.yaml  run.sh
docs/: architecture.md  setup.md
pagi-gateway-core/: Cargo.toml  build.rs
pagi-gateway-core/src/: bus.rs  canonical.rs  config.rs  digital_twin.rs  lib.rs  main.rs  registry.rs
pagi-gateway-core/src/middleware/: auth.rs  mod.rs  observability.rs  rate_limit.rs
pagi-gateway-core/src/protocols/: graphql.rs  grpc.rs  mod.rs  rest.rs  ws.rs
tools/: generate-protos.sh
