[package]
name = "pagi-gateway-core"
version = "0.1.0"
edition = "2021"
license = "MIT"

[features]
default = []
digital-twin = []

[dependencies]
anyhow = "1"
async-graphql = "7"
bytes = "1"
governor = "0.6"
hyper = { version = "0.14", features = ["full"] }
prometheus = "0.13"
prost = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "fs", "io-util"] }
tonic = "0.11"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }

[build-dependencies]
tonic-build = "0.11"
protoc-bin-vendored = "3"
